@@ -1183,8 +1183,6 @@
   <class name="GtkBindingSet"/>
   <class name="GtkBorder"/>
   <class name="GtkBoxChild"/>
-  <class name="GtkClipboardClearFunc"/>
-  <class name="GtkClipboardGetFunc"/>
   <class name="GtkDebugFlag"/>
   <class name="GtkDestDefaults"/>
   <class name="GtkExpanderStyle"/>
